# aligator-bench

./: .gersemirc  .gitignore  .gitmodules  .pre-commit-config.yaml  ANYmal.toml  CMakeLists.txt  README.md  double_pendulum.toml  ur.toml
benchmarks/: CMakeLists.txt  bench_runner.py  bolt.py  common.py  panda.py  pendulum.cpp  run_slalom_bench.py  run_solo_yoga_bench.py  run_ur_ballistic_bench.py  run_ur_bench.py  solo.py  solo_stand.py  solver_runner.py  ur10_ballistic.py  ur5-util.cpp  ur5.cpp  ur5_obstacles.py  ur5_problem.py  ur_slalom.py  util.hpp
benchmarks/cpp/: CMakeLists.txt  ur5.cpp
results/: plot.ipynb  plot_results.py
src/: CMakeLists.txt  aligator-problem-to-altro.cpp  aligator-problem-to-altro.hpp  aligator-to-altro-types.cpp  aligator-to-altro-types.hpp  aligator-to-altro.cpp  aligator-to-altro.hpp  collision-distance.cpp  collision-distance.hpp  fwd.hpp  ipopt-interface.cpp  ipopt-interface.hpp  ipopt-solver.cpp  ipopt-solver.hpp  triang_util.hpp  types.hpp  util.cpp  util.hpp
src/problems/: CMakeLists.txt  linear-problem.cpp  linear-problem.hpp  ur5-util.hpp
src/python/: CMakeLists.txt  common.h  expose-aligator-to-altro.cpp  expose-altro.cpp  expose-collision-distance.cpp  expose-ipopt-solver.cpp  module.cpp
src/robots/: CMakeLists.txt  instantiate.cpp  robot_load.cpp  robot_load.hpp  robot_spec.cpp  robot_spec.hpp
src/solvers/: al-ddp.cpp  al-ddp.hpp  solvers.hpp
tests/: CMakeLists.txt  linear-problem.cpp  linear-problem.hpp  test_aligator_to_altro.cpp  test_ipopt_solver.cpp  test_loader.cpp  test_triang.cpp
